Refactored grep and GrepTest